--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   "homepage": "",
   "private": true,
   "dependencies": {
-    "normalize-css": "^7.0.0"
+    "normalize-css": "^7.0.0",
+    "bootstrap": "v4.0.0-beta"
   },
   "devDependencies": {}
 }
