Some improvements & work with html/sass components

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "#Mateusz Archiciński Page",
-    "short_name": "#MA Page",
+    "name": "#Mateusz Archiciński Website",
+    "short_name": "#MA - Website",
     "start_url": ".",
     "theme_color": "#f44336",
     "background_color": "#212121",
