--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
   "private": true,
   "dependencies": {
     "normalize-css": "^7.0.0",
-    "bootstrap": "v4.0.0-beta"
+    "bootstrap": "v4.0.0-beta",
+    "jquery": "^3.2.1",
+    "owl.carousel": "^2.2.1"
   },
   "devDependencies": {}
 }
