--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "author": "Mateusz Archiciński",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "throttle-debounce": "^1.0.1"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
