WO: site-nav & side-nav components also added smooth scrolling

--- a/src/fonts/Fontello/config.json
+++ b/src/fonts/Fontello/config.json
@@ -173,6 +173,12 @@
       "css": "clock",
       "code": 59405,
       "src": "fontawesome"
+    },
+    {
+      "uid": "559647a6f430b3aeadbecd67194451dd",
+      "css": "menu",
+      "code": 61641,
+      "src": "fontawesome"
     }
   ]
 }
