WO|R-P-O|pug-scss-js|sections:home&services&portfolio&contact-main-footer

--- a/src/fonts/Fontello/config.json
+++ b/src/fonts/Fontello/config.json
@@ -179,6 +179,12 @@
       "css": "menu",
       "code": 61641,
       "src": "fontawesome"
+    },
+    {
+      "uid": "c5fd349cbd3d23e4ade333789c29c729",
+      "css": "eye",
+      "code": 59406,
+      "src": "fontawesome"
     }
   ]
 }
