WO|O-RE|js|javascript improvements

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mateusz-archicinski.pl",
+  "name": "mateusz-archicinski.pl-frontend",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
