--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,40 +1,40 @@
 {
-    "name": "#Mateusz Archiciński Website",
-    "short_name": "#MA - Website",
+    "name": "Mateusz Archiciński / Front-End Developer",
+    "short_name": "#MA / Front-End Developer",
     "start_url": ".",
     "theme_color": "#f44336",
-    "background_color": "#212121",
+    "background_color": "#f44336",
     "orientation": "portrait",
     "display": "browser",
     "description": "Strona internetowa młodego frontend developera, freelancera z okolic Warszawy. Zajmuje się odświeżaniem obecnych i tworzeniem nowych stron wizytówek. Ostatnimi czasy zagłebiam się w tajniki webdesignu i poznawaniu bardziej złożonych technologii oraz pozycjoonowania.",
     "icons": [
         {
-            "src": "images/logo/logo-48x48.png",
+            "src": "/images/logo/logo-48x48.png",
             "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "images/logo/logo-72x72.png",
+            "src": "/images/logo/logo-72x72.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "images/logo/logo-96x96.png",
+            "src": "/images/logo/logo-96x96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "images/logo/logo-144x144.png",
+            "src": "/images/logo/logo-144x144.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "images/logo/logo-168x168.png",
+            "src": "/images/logo/logo-168x168.png",
             "sizes": "168x168",
             "type": "image/png"
         },
         {
-            "src": "images/logo/logo-192x192.png",
+            "src": "/images/logo/logo-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         }
