WO|O-RE-N|sass-pug-js|Improved gulp tasks & Added new functionality - github user info

--- a/src/fonts/Fontello/config.json
+++ b/src/fonts/Fontello/config.json
@@ -185,6 +185,18 @@
       "css": "eye",
       "code": 59406,
       "src": "fontawesome"
+    },
+    {
+      "uid": "12f4ece88e46abd864e40b35e05b11cd",
+      "css": "ok",
+      "code": 59407,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "d4816c0845aa43767213d45574b3b145",
+      "css": "history",
+      "code": 61914,
+      "src": "fontawesome"
     }
   ]
 }
