--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "eslint": "gulp js:eslint",
     "dev": "gulp",
-    "test": "gulp js:eslint && gulp js:test",
-    "prod": "gulp build --upload",
+    "test": "gulp js:eslint && gulp js:test --env test",
+    "prod": "gulp build --env production",
     "jsdoc": "jsdoc -c jsdoc.config.json"
   },
   "author": "Mateusz Archiciński",
   "license": "ISC",
   "dependencies": {
+    "socket.io-client": "^2.0.4",
     "throttle-debounce": "^1.0.1"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
     "run-sequence": "^1.2.2",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
